--- a/Upploader.html
+++ b/Upploader.html
@@ -1,99 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Ajax Uploader</title>
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../assets/css/styles.css" rel="stylesheet">
-  </head>
-  <body>
-
-      <div class="container">
-        <div class="page-header">
-          <h1>Simple Ajax Uploader</h1>
-          <h3>Basic Example</h3>
+<html>
+<head>
+    <title>HTML5 Upload Demo</title>
+    <link rel="stylesheet" type="text/css" href="/Content/styles/styles.css" />
+</head>
+<body>
+    <div class="body">
+        <div>
+            <h1>HTML5 Ajax Uploader Demo</h1>
         </div>
-          <div class="row" style="padding-top:10px;">
-            <div class="col-xs-2">
-              <button id="uploadBtn" class="btn btn-large btn-primary">Choose File</button>
+
+        <div id="dragndropimage" class="uploadimage-dragndrop">
+            <div class="uploadimage-text">Drag images here</div>
+            <div>Or, if you prefer...</div>
+            <div class="uploadimage-input">
+                <input type="file" multiple="multiple" name="uploadFiles" id="upload-input" />
             </div>
-            <div class="col-xs-10">
-          <div id="progressOuter" class="progress progress-striped active" style="display:none;">
-            <div id="progressBar" class="progress-bar progress-bar-success"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+        </div>
+
+        <div id="upload-liveuploads" data-bind="template: { name: 'template-uploads' }"></div>
+
+        <div class="description">
+            <h2>RequireJS, Knockout and Uploader Harmony</h2>
+            <p>
+                Scripts are loaded using module loader <a href="http://requirejs.org/">RequireJS</a>. This demo 
+                demonstrates how to use <a href="https://github.com/devbridge/html5-file-uploader">html5 ajax uploader</a> and <a href="http://knockoutjs.com/">knockout</a> to customize UI for uploads. 
+            </p>
+            
+            <h2>Show me the code</h2>
+            <script type="text/javascript" src="https://gist.github.com/4028759.js"></script>
+        </div>
+
+        <script type="text/html" id="template-uploads">
+            <div data-bind="visible: showTotalProgress()">
+                <div>
+                    <span data-bind="text: uploadSpeedFormatted()"></span>
+                    <span data-bind="text: timeRemainingFormatted()" style="float: right;"></span>
+                </div>
+                <div class="uploadimage-totalprogress">
+                    <div class="uploadimage-totalprogressbar" style="width: 0%;" data-bind="style: { width: totalProgress() + '%' }"></div>
+                </div>
             </div>
-          </div>
+            <div data-bind="foreach: uploads">
+                <div class="uploadimage-upload" data-bind="css: { 'uploadimage-uploadcompleted': uploadCompleted() }">
+                    <div class="uploadimage-fileinfo">
+                        <strong data-bind="text: fileName"></strong>
+                        <span data-bind="text: fileSizeFormated"></span>
+                        <span class="uploadimage-progresspct" data-bind="visible: uploadProgress() < 100"><span data-bind="text: uploadSpeedFormatted()"></span></span>
+                    </div>
+                    <div class="uploadimage-progress">
+                        <div class="uploadimage-progressbar" style="width: 0%;" data-bind="style: { width: uploadProgress() + '%' }"></div>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="row" style="padding-top:10px;">
-            <div class="col-xs-10">
-              <div id="msgBox">
-              </div>
-            </div>
-          </div>
-      </div>
+        </script>
 
-  <script src="../../SimpleAjaxUploader.js"></script>
-<script>
-function escapeTags( str ) {
-  return String( str )
-           .replace( /&/g, '&amp;' )
-           .replace( /"/g, '&quot;' )
-           .replace( /'/g, '&#39;' )
-           .replace( /</g, '&lt;' )
-           .replace( />/g, '&gt;' );
-}
 
-window.onload = function() {
+        <script type="text/javascript" data-main="/scripts/main" src="/Scripts/require.js"></script>
 
-  var btn = document.getElementById('uploadBtn'),
-      progressBar = document.getElementById('progressBar'),
-      progressOuter = document.getElementById('progressOuter'),
-      msgBox = document.getElementById('msgBox');
-
-  var uploader = new ss.SimpleUpload({
-        button: btn,
-        url: 'file_upload.php',
-        name: 'uploadfile',
-        multipart: true,
-        hoverClass: 'hover',
-        focusClass: 'focus',
-        responseType: 'json',
-        startXHR: function() {
-            progressOuter.style.display = 'block'; // make progress bar visible
-            this.setProgressBar( progressBar );
-        },
-        onSubmit: function() {
-            msgBox.innerHTML = ''; // empty the message box
-            btn.innerHTML = 'Uploading...'; // change button text to "Uploading..."
-          },
-        onComplete: function( filename, response ) {
-            btn.innerHTML = 'Choose Another File';
-            progressOuter.style.display = 'none'; // hide progress bar when upload is completed
-
-            if ( !response ) {
-                msgBox.innerHTML = 'Unable to upload file';
-                return;
-            }
-
-            if ( response.success === true ) {
-                msgBox.innerHTML = '<strong>' + escapeTags( filename ) + '</strong>' + ' successfully uploaded.';
-
-            } else {
-                if ( response.msg )  {
-                    msgBox.innerHTML = escapeTags( response.msg );
-
-                } else {
-                    msgBox.innerHTML = 'An error occurred and the upload failed.';
-                }
-            }
-          },
-        onError: function() {
-            progressOuter.style.display = 'none';
-            msgBox.innerHTML = 'Unable to upload file';
-          }
-	});
-};
-</script>
-  </body>
+    </div>
+</body>
 </html>
